fix bug of live page on ios

--- a/src/css/customer/live-list.scss
+++ b/src/css/customer/live-list.scss
@@ -18,11 +18,6 @@
   padding-bottom: 76px;
 }
 
-.live-img{
-  width: 702px;
-  height: 251px;
-}
-
 .live-name{
   position: absolute;
   bottom: 24px;
@@ -127,4 +122,21 @@
 
 .onlive{
   margin-right: 16px;
+}
+
+.live-wrap{
+	position: relative;
+	width: 702px;
+  height: 251px;
+}
+.default-live{
+	width: 702px;
+  height: 251px;
+}
+.live-pic{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 702px;
+  height: 251px;
 }
